e2e-tests/tests/snapshots/martin_generate__sort_by_order.snap
---
source: e2e-tests/tests/martin_generate.rs
expression: "order.join(\"\\n\")"
---
0/0/0 sorted 7 11 15 19 23 27 2 6 10 18 22 26 1 5 9 13 17 21 25 8 12 16 20 24 28
1/0/0 sorted 3 15 2 18 1 17 4 16
1/0/1 sorted 3 15 2 18 1 17 4 16
1/1/0 sorted 3 15 2 18 1 17 4 16
1/1/1 sorted 3 7 11 15 19 23 27 2 6 10 18 22 26 1 5 9 13 17 21 25 4 8 12 16 20 24 28
