e2e-tests/tests/snapshots/martin_generate__tiles.snap
---
source: e2e-tests/tests/martin_generate.rs
expression: tile_listing(&output).await
---
0/0/0 546 bytes
1/0/0 242 bytes
1/0/1 250 bytes
1/1/0 241 bytes
1/1/1 542 bytes
2/0/1 55 bytes
2/0/2 50 bytes
2/0/3 38 bytes
2/1/0 38 bytes
2/1/1 201 bytes
2/1/2 202 bytes
2/1/3 37 bytes
2/2/1 205 bytes
2/2/2 516 bytes
2/2/3 38 bytes
2/3/1 50 bytes
2/3/2 114 bytes
2/3/3 38 bytes
3/0/2 38 bytes
3/0/4 44 bytes
3/0/7 38 bytes
3/1/2 44 bytes
3/1/4 38 bytes
3/2/1 38 bytes
3/2/3 44 bytes
3/2/7 38 bytes
3/3/2 38 bytes
3/3/3 168 bytes
3/3/4 199 bytes
3/4/2 38 bytes
3/4/3 193 bytes
3/4/4 557 bytes
3/4/5 70 bytes
3/5/3 44 bytes
3/5/4 132 bytes
3/5/5 92 bytes
3/5/6 38 bytes
3/6/2 38 bytes
3/7/2 38 bytes
3/7/3 38 bytes
3/7/4 104 bytes
3/7/5 38 bytes
3/7/6 38 bytes
